fix(Task-22): scrollbar disappear in mobile size

--- a/Heroes_Register_Screen/style.css
+++ b/Heroes_Register_Screen/style.css
@@ -32,14 +32,13 @@ footer, header {
 
 .multiselect {
   padding-top: 15px;
+  padding-bottom: 70px;
 }
 
 .container {
   height: 100%;
   padding-top: 90px;
   padding-bottom: 70px;
-  display: flex;
-  flex-direction: column;
 }
 
 body {
@@ -54,14 +53,19 @@ body {
   overflow: hidden;
 }
 
+@media screen and (min-width: 990px) {
+  .form {
+    display: flex;
+    flex: 1;
+    overflow: auto;
+  }
+}
+
 .form {
   height: 600px;
   padding-left: 5%;
   padding-right: 5%;
   padding-top: 2%;
-  padding-bottom: 2%;
-  flex: 1;
-  overflow: auto;
 }
 
 .img-fluid {
